=== Version 0.6.8
* Enhancements
  * Updated to use watir-webdriver 0.6.1
  * Updated to use selenium-webdriver 2.22.1
* Fixes
  Modified text area methods so it clears before setting new text
  Fixed clear method on SelectList when using Selenium to clear multi selects

=== Version 0.6.7 / 2012-5-16
* Enhancements
  * Added flash method to Element to temporarily change the background color
  * Added when_not_present method to Element
  * Added default override for page level waits - PageObject.default_page_wait
  * Added default override for element level waits - PageObject.default_element_wait
  * Added the ability to find a TableRow by providing a String to the [] method from Table
  * Added the ability to find a TableCell by providing a String to the [] method from TableRow
  * Updated to use watir-webdriver 0.5.8
* Fixes
  * Improved logic around selecting options from select lists
  * TableCell now handles enabled? call gracefully

=== Version 0.6.6 / 2012-4-26
* Enhancements
  * Added ability to find span's by title
  * Changed order of initialization so initialize_page is called after goto
  * Updated to use watir-webdriver 0.5.5
  * Updated to use selenium-webdriver 2.21.2
* Fixes
  * Fixed the problem with determining the existance of an Selenium element

=== Version 0.6.5 / 2012-4-12
* Enhancements
  * Added a page level element method to return a generic Element object
  * Added a method to retrieve all file fields on a page
  * Updated all accessor methods to take a default identifier of {:index => 0}
  * Updated all page level element locators to take a default identifier of {:index => 0}
  * Updated all page level multi-element locators to take a default identifier of {}
  * Updated deprecation warning to print to stderr (Thanks Josh Adell)
  * Updated to use selenium-webdriver 2.21.0

=== Version 0.6.4 / 2012-3-27
* Enhancements
  * Added support for finding the following elements by :css
	Button
	Link