@@ -47,3 +47,11 @@ end
 Then /^the data for row "([^\"]*)" and column "([^\"]*)" should be "([^\"]*)"$/ do |row, column, value|
   @element[row][column].text.should == value
 end
+
+Then /^the data for row "([^\"]*)" should be nil$/ do |row|
+  @element[row].should be_nil
+end
+
+Then /^the data for row "([^\"]*)" and column "([^\"]*)" should be nil$/ do |row, column|
+  @element[row][column].should be_nil
+end
