@@ -12,6 +12,7 @@ module PageObject
         def [](idx)
           els = table_cells
           idx = find_index_by_title(idx) if idx.kind_of?(String)
+          return nil unless idx
           Object::PageObject::Elements::TableCell.new(els[idx], :platform => :selenium_webdriver)
         end
 
